# web3-curriculum

./: .devcontainer.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  Dockerfile  LICENSE  README.md  freecodecamp.conf.json  package-lock.json  package.json
.freeCodeCamp/: Dockerfile  (+6 more)
build-a-smart-contract-in-rust/: .gitpod.yml  Cargo.toml  README.md  package.json
build-a-smart-contract-in-rust/.freeCodeCamp/: Dockerfile  tsconfig.json
build-a-smart-contract-in-rust/.freeCodeCamp/client/: index.tsx
build-a-smart-contract-in-rust/.freeCodeCamp/client/components/: integrated-project-output.tsx  project-controls.tsx  ruler.tsx
build-a-smart-contract-in-rust/.freeCodeCamp/client/templates/: integrated-project.tsx
build-a-smart-contract-in-rust/.freeCodeCamp/tooling/: client-socks.js
build-a-smart-contract-in-rust/_src/: lib.rs
build-a-smart-contract-in-rust/node/: deploy.js  init-blockchain.js  mine-block.js  smart-contract.js  start-node.js  utils.js
build-a-smart-contract-in-rust/node/client/: index.html  index.js
build-a-smart-contract-in-rust/node/web3/: index.js
build-a-smart-contract-in-rust/src/: lib.rs
build-a-smart-contract-in-rust/tests/: get_contract_account.rs  initialise.rs  set_click.rs
build-a-web3-client-side-package-for-your-dapp/fixture/blockchain/: Cargo.toml
build-a-web3-client-side-package-for-your-dapp/fixture/blockchain/pkg/: blockchain.d.ts  blockchain.js  blockchain_bg.wasm  blockchain_bg.wasm.d.ts  package.json
build-a-web3-client-side-package-for-your-dapp/fixture/blockchain/src/: account.rs  block.rs  chain.rs  lib.rs  smart_contract.rs
learn-proof-of-stake-consensus-by-completing-a-web3-game/blockchain/: Cargo.toml
learn-proof-of-stake-consensus-by-completing-a-web3-game/blockchain/src/: block.rs  chain.rs  lib.rs  node.rs
learn-proof-of-stake-consensus-by-completing-a-web3-game/blockchain/tests/: handle_mine.rs
(+270 files in other folders)
