[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
chrono = { version = "0.4.19", features = ["wasmbind"] }
sha2 = "0.10.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
hex = "0.4.3"
web-sys = { version = "0.3.58", features = ["console", "ErrorEvent"] }
